# config/swagger.json
@@ -17,6 +17,9 @@
     },
     {
       "name": "Booking"
+    },
+    {
+      "name": "Examination"
     }
   ],
   "consumes": [
@@ -517,6 +520,69 @@
           "Booking"
         ]
       }
+    },
+    "/api/examinations": {
+      "get": {
+        "summary": "Get All Examinations",
+        "description": "Can Get Examinations, But Can not Edit and Delete",
+        "security": [{
+          "BearerTokenAuth": []
+        }],
+        "responses": {
+          "200": {
+            "description": "Berhasil ditampilkan",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/definitions/coreResponseExamination"
+                }
+              }
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "tags": [
+          "Examination"
+        ]
+      }
+    },
+    "/api/examinations/{id}": {
+      "get": {
+        "summary": "Get Examination data By Id",
+        "description": "Retrieve examination data by Id",
+        "security": [{
+          "BearerTokenAuth": []
+        }],
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/coreResponseExamination"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [{
+          "name": "id",
+          "in": "path",
+          "required": true,
+          "type": "integer",
+          "format": "int64"
+        }],
+        "tags": [
+          "Examination"
+        ]
+      }
     }
   },
   "definitions": {
@@ -803,6 +869,26 @@
         },
         "isDone": {
           "type": "boolean"
+        },
+        "createdAt": {
+          "type": "string",
+          "format": "date-time"
+        },
+        "updatedAt": {
+          "type": "string",
+          "format": "date-time"
+        }
+      }
+    },
+    "coreResponseExamination": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "name": {
+          "type": "string"
         },
         "createdAt": {
           "type": "string",
